2004-08-06 07:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormObjectEditor.m: Temporary fix for recently discovered
	crash.
	
2004-08-06 07:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/GormMenuEditor.m: Added rightMouseDown: method
	to effectively ignore when the right mouse button is 
	pressed when over a menu that is being edited.  This was
	causing the problem described in Bug#9827.
	
2004-08-05 01:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/GormNSMenu.m: Added code in the initWithCoder:
	method to subscribe to the notification which indicates
	a selection change.  When the notification is recieved,
	if the menu is owned by a popup the menu is closed.  This
	corrects Bug#9771.
	
2004-08-04 01:08 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormPalettesManager.m: -[GormPalettesManager loadPalette:]
	added code to made sure that the palette view cannot exceed
	the maximum size.  This prevents accidentally causing the 
	issue cited in the previous entry.
	
2004-08-04 00:52 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: -[GormDocument setupDefaults:] changed
	size of the window for a new palette.  If it's too big it 
	causes problems with event handling in the palettes.
	* Palettes/2Controls/GNUmakefile: Added ControlsPalette.gorm
	* Palettes/2Controls/main.m: Removed much of the code
	from the ControlsPalette class.  It's not needed now
	that the palette uses a .gorm file.
	* Palettes/2Controls/ControlsPalette.gorm: New gui for the
	palette.
	
2004-08-02 23:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormViewEditor.m: Added stub for initWithCoder just for
	completeness.
	* Palettes/2Controls/GormButtonEditor.m: Change references
	to xDist and yDist to new names from NSCell.h
	
2004-08-02 08:54 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormPalettesManager.m: Clarified error message when
	unable to load palettes.
	